--- a/package.json
+++ b/package.json
@@ -24,19 +24,22 @@
         "@ionic-native/core": "3.12.1",
         "@ionic-native/file": "^4.2.0",
         "@ionic-native/file-transfer": "^4.2.1",
+        "@ionic-native/in-app-browser": "^4.2.1",
         "@ionic-native/network": "^3.12.1",
+        "@ionic-native/onesignal": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/sqlite": "^3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "chart.js": "^2.7.0",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-file": "^4.0.0",
         "cordova-plugin-file-transfer": "^1.6.3",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
@@ -46,6 +49,7 @@
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "ngx-pipes": "^1.6.2",
+        "onesignal-cordova-plugin": "^2.2.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
@@ -58,7 +62,6 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-console": {},
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
@@ -71,11 +74,15 @@
             "cordova-plugin-camera": {
                 "CAMERA_USAGE_DESCRIPTION": " ",
                 "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
-            }
+            },
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android",
             "ios"
         ]
+    },
+    "config": {
+        "ionic_source_map": "source-map"
     }
 }
